--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,29 @@
 .pet-type{
     width: 200px;
 }
+.notification{
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 10px;
+    width: 300px;
+    background-color: black;
+    color: white;
+    padding: 10px;
+}
+#closeNotification{
+    float: right;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+#notificationText{
+    margin: 0;
+}
+
+.success{
+    background-color: green;
+}
+.error{
+    background-color: red;
+}
