--- a/styles/register.css
+++ b/styles/register.css
@@ -1,7 +1,6 @@
 /*form style*/
 
 .input-container{
-    
     margin-bottom: 10px;
 }
 .input-container input, 
@@ -21,4 +20,24 @@
 }
 .payment-btn{
     border: none;
+}
+body {
+    background-color: rgb(99, 96, 96);
+    color:black;
+}
+a {
+    text-decoration: none;
+    color: rgb(233, 106, 21);
+}
+.site-header-container-r{
+    width: 100%;
+    height: 360px;
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+    background-image: url(../img/register-banner.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: rgb(233, 106, 21);
 }
